--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -35,24 +35,7 @@
                         dolorum aperiam aliquam inventore rerum recusandae consequuntur fugiat, itaque provident
                         adipisci vel explicabo accusantium voluptas est quasi vero porro laborum dolorem? Quis molestiae
                         molestias consequuntur nostrum totam, placeat doloremque et expedita exercitationem itaque
-                        blanditiis labore nobis deleniti. Iure animi reprehenderit blanditiis mollitia quia, voluptatem
-                        quis cupiditate fugiat illo reiciendis ipsa beatae. Ducimus, rem debitis odit incidunt amet quae
-                        explicabo delectus, voluptatum voluptates ad ut ea nostrum magni. Officia blanditiis quasi
-                        quaerat, inventore voluptatum omnis? Vel tenetur nemo eligendi ab nostrum veniam consequatur?
-                        Deleniti fuga, aliquid error dolore incidunt at vel eos! Unde dolore rem suscipit aut culpa
-                        corporis porro voluptas harum aliquid nesciunt id, architecto cum laboriosam doloremque quis,
-                        mollitia laudantium non. Voluptate expedita consectetur tempora corporis adipisci tenetur, saepe
-                        iure. Dolores qui eveniet magni perspiciatis officia magnam nihil dolor earum error repudiandae
-                        tempore fuga corporis ducimus iusto expedita aut similique suscipit est ipsa velit, dicta
-                        facilis ab. Sunt neque id mollitia in perferendis sed. Voluptas dicta eaque nesciunt impedit
-                        debitis. Ratione enim hic pariatur itaque reiciendis omnis voluptatum aliquid incidunt cum ex,
-                        nobis sint! Eveniet quos iusto placeat natus quae facere possimus aliquam similique quia
-                        obcaecati unde in numquam recusandae ad, accusantium accusamus nisi corrupti praesentium
-                        necessitatibus eligendi fugit. Mollitia modi harum, possimus libero laborum error alias. Rem
-                        ullam odio sint mollitia consequuntur est voluptatum quos porro praesentium! At veniam sit quod
-                        eos, doloribus quos architecto id molestiae distinctio, beatae quam laboriosam porro, ipsa
-                        excepturi odio? Ullam laborum cumque a eaque quis consequatur! Voluptatem expedita facilis
-                        molestias optio sed doloremque impedit quam rerum.
+                        blanditiis labore nobis deleniti.
                     </p>
                     <a href="#" class="btn">Play Advanced</a>
                 </div>
